2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* test/test_oci8.rb: Fix to pass a test when the client is 11g
	    and the server is 18c. client_driver in v$session_connect_info
	    has an extra space at the end.

2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, lib/oci8/oci8.rb, lib/oci8/oracle_version.rb,
	  test/test_oci8.rb: Fix OCI8#oracle_server_version to get
	    full version of Oracle 18c.

2018-08-18  Kubo Takehiro <kubo@jiubao.org>
	* lib/oci8/metadata.rb: Update doc comments of OCI8::Metadata::ArgBase#level
	    and OCI8::Metadata::ArgBase#arguments.
	* test/test_package_type.rb, lib/oci8.rb: Fix to pass tests on Oracle 18c.
	    Detailed user-defined type information used in arguments isn't available
	    on Oracle 18c.

2018-08-12  Kubo Takehiro <kubo@jiubao.org>
	* test/test_clob.rb: Skip TestCLob#test_github_issue_20 because it
	    takes 4 minutes to test it in my Linux box.

2018-08-12  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/lob.c, test/test_clob.rb: LOB#sync, LOB#sync= and LOB#flush
	    do nothing now. They have not worked by mistake from the beginning
	    because incorrect arguments has been passed to OCILobOpen().
	    Moreover it crashed Oracle 18c server-side processes and caused
	    "ORA-03113: end-of-file on communication channel."
	    (github issue #198)

2018-01-28  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/object.rb: Add timestamp with time zone
	    data type support in object type attributes.
	    (github issue #185)
	* test/setup_test_object.sql, test/test_object.rb: Add tests for
	    timestamp and timestamp with time zone.

2018-01-23  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/oci8.h, lib/oci8/object.rb:
	    Add timestamp data type support in object type attributes.
	    (github issue #185)

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* mkpkg-win32.rb: Remove '-rubygems' in the command line to run tests.